# AeroUI

./: README.md
AeroUI-main/backend/: db.sqlite3  requirements.txt
AeroUI-main/backend/Gesture_Detection/: settings.py  urls.py
AeroUI-main/backend/core/: views.py
AeroUI-main/backend/core/migrations/: 0002_alter_mediastate_id_alter_vehiclestate_id.py
AeroUI-main/frontend/: index.html  package.json  tsconfig.json
AeroUI-main/frontend/src/components/: Dashboard.tsx  DebugCamera.tsx
backend/: db.sqlite3  manage.py
backend/Gesture_Detection/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: models.py  serializers.py  urls.py
backend/core/migrations/: 0001_initial.py
backend_fastapi/: main.py  models.py
embedded_ui/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  debug_mp.py  run_basic.py  run_ui.py
embedded_ui/qml/: Dashboard.qml  Main.qml  MinimalTest.qml  MusicPlayer.qml  NavigationMap.qml  SimpleMain.qml  VirtualCursor.qml
embedded_ui/src/: CameraManager.cpp  CameraManager.h  GestureController.cpp  GestureController.h  NetworkManager.cpp  NetworkManager.h  main.cpp
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  style.css
frontend/src/components/: ClimateControl.tsx  ContactsPanel.tsx  Dashboard.tsx  DigitalTwinCursor.tsx  GestureController.tsx  KnobControl.tsx  LayoutGrid.tsx  MapWidget.tsx  MusicPlayer.tsx  StatusPanel.tsx  VolumeControl.tsx
frontend/src/context/: GestureContext.tsx
